[package]
name = "godot-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "godot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "string"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dialoguer = "0.11"
directories = "5.0"
anyhow = "1.0"
